# final_project_dfs

./: .gitignore  .pre-commit-config.yaml  README Jun25 Claude.md  README.md  RNN_M2_3.0.ipynb  RNN_M3_2.0.ipynb  all_res.csv  analyze_fp_pred.ipynb  constants.py  data_loader.py  df_fd.csv  dfs_contests_2022-04-07.csv  fetch_y_pred.py  fetch_y_pred_old.py  fp_pred.csv  gamelog_contests_scrape.ipynb  genetic_selection.csv  genetic_selection.py  genetic_selection_res.csv  historic_dfs_data.csv  init_res.csv  linear_programming.py  main.py  merge_salaries_and_gamelogs_v2.ipynb  nba_2019-2020_salaries.csv  optimized_lineup_xgb_daily.csv  post_process.py  predict_fp.py  predict_fp_rnn.py  predict_fp_rnn_daily.py  predict_fp_xgb.py  predict_fp_xgb_daily.py  pyproject.toml  requirements.txt  research_notebook.ipynb  run_file.py  scrape_salaries.py  scrape_salaries_v2.py  start.ipynb  time_predict_y_pred.ipynb  (+2 more)
.ipynb_checkpoints/: EDA-checkpoint.ipynb  analyze_fp_pred-checkpoint.ipynb  fp_pred-checkpoint.csv  merge_salaries_and_gamelogs_v2-checkpoint.ipynb  time_predict_y_pred-checkpoint.ipynb
config/: constants.py  dfs_categories.py  fantasy_point_calculation.py  feature_engineering.py  feature_selection_res.py  helpers.py  model_configs.py  pipelines.py  stat_aggregation.py
deprecated_versions/: fetch_y_pred_v0.py  merge_fp_pred_and_prices.ipynb  merge_salaries_and_stats.ipynb
feature_selection/: find_best_features.py  predicting_ast.py  predicting_blk.py  predicting_pts.py  predicting_reb.py  predicting_stl.py  predicting_tov.py  run_all_experiments.py
(+2562 files in other folders)
